--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ ratatui = "0.26"
 serde_yaml = "0.9"
 fuzzy-matcher = "0.3"
 libc = "0.2"
+clap = { version = "4.4", features = ["derive"] }
 successlib = { git = "https://github.com/Calonca/success-lib", branch = "main" }
