--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "success-cli"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 description = "CLI for achieving goals"
 
@@ -9,11 +9,9 @@ anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-uuid = { version = "1.4", features = ["v4"] }
-crossterm = "0.27"
-ratatui = "0.26"
-serde_yaml = "0.9"
-fuzzy-matcher = "0.3"
+crossterm = "0.28"
+ratatui = "0.30"
 libc = "0.2"
 clap = { version = "4.4", features = ["derive"] }
-successlib = { git = "https://github.com/Calonca/success-lib", branch = "main" }
+success-core = { path = "success-core" }
+successlib = { git = "https://github.com/Calonca/success-lib", branch = "v0.5.x" }
