--- a/success-web/Cargo.toml
+++ b/success-web/Cargo.toml
@@ -10,5 +10,4 @@ serde = { version = "1.0", features = ["derive"] }
 console_error_panic_hook = "0.1"
 success-core = { path = "../success-core", features = ["web"] }
 successlib = { git = "https://github.com/Calonca/success-lib", branch = "v0.5.x" }
-# Use this patch to access dynamic font atlas support and fix redraw not triggered when only the cursor position is updated.
-ratzilla = { git = "https://github.com/Calonca/ratzilla", branch = "fix/cursor-movement-invisible" }
+ratzilla = { git = "https://github.com/ratatui/ratzilla", branch = "main" }
