--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ Cargo.lock
 *.pdb
 
 # End of https://www.toptal.com/developers/gitignore/api/rust
-.serena/
 archive/
 dist/
 *.wasm
@@ -31,4 +30,13 @@ build/
 .vscode/
 .idea/
 ratzilla/
+
+# LLMs
+openspec/
+.opencode/
+.github/
 .answers/
+.serena/
+.github/prompts/
+.github/skills/
+.agent/
